--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,7 +4,7 @@
   - if current_user
     %ul.span4.clearfix
       %li= link_to "Videos"
-      %li= link_to "My Queue"
+      %li= link_to "My Queue", my_queue_path
       %li= link_to "People"
     %form.span5.for-search(action="/videos/search")
       %input.search-query(type="text" name="search_term" placeholder="Search for videos here" value="#{@search_term}")
