--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -10,7 +10,7 @@
         %p= @video.description
         .actions
           %a.btn.btn-primary(href="") Watch Now
-          = link_to "+ My Queue", queue_items_path(video_id: @video.id), method: :post, class: 'btn'
+          = add_queue_btn(@video)
 
 %section.reviews.container
   .row
