--- a/app/views/queue_items/index.html.haml
+++ b/app/views/queue_items/index.html.haml
@@ -4,27 +4,28 @@
       %article
         %header
           %h2 My Queue
-        %table.table
-          %thead
-            %tr
-              %th(width="10%") List Order
-              %th(width="30%") Video Title
-              %th(width="10%") Play
-              %th(width="20%") Rating
-              %th(width="15%") Genre
-              %th(width="15%") Remove
-          %tbody
-            - @queue_items.each do |queue_item|
+        = form_tag order_exchanging_queue_items_path do
+          %table.table
+            %thead
               %tr
-                %td= queue_item.position
-                %td
-                  = link_to queue_item.video_title, queue_item.video
-                %td
-                  = button_to "Play", nil, class: "btn"
-                %td= queue_item.rating
-                %td
-                  = link_to queue_item.category_name, queue_item.category
-                %td
-                  = link_to queue_item, method: :delete, confirm: 'Are you sure?' do
-                    %i.icon-remove
-        = button_to "Update Instant Queue", nil, class: "btn"
+                %th(width="10%") List Order
+                %th(width="30%") Video Title
+                %th(width="10%") Play
+                %th(width="20%") Rating
+                %th(width="15%") Genre
+                %th(width="15%") Remove
+            %tbody
+              - @queue_items.each do |queue_item|
+                %tr
+                  %td= text_field_tag "position[#{queue_item.id}]", queue_item.position
+                  %td
+                    = link_to queue_item.video_title, queue_item.video
+                  %td
+                    = button_to "Play", nil, class: "btn"
+                  %td= queue_item.rating
+                  %td
+                    = link_to queue_item.category_name, queue_item.category
+                  %td
+                    = link_to queue_item, method: :delete, confirm: 'Are you sure?' do
+                      %i.icon-remove
+          = submit_tag "Update Instant Queue", class: "btn"
