--- a/app/views/queue_items/index.html.haml
+++ b/app/views/queue_items/index.html.haml
@@ -4,7 +4,7 @@
       %article
         %header
           %h2 My Queue
-        = form_tag order_exchanging_queue_items_path do
+        = form_tag update_queue_path do
           %table.table
             %thead
               %tr
@@ -17,7 +17,8 @@
             %tbody
               - @queue_items.each do |queue_item|
                 %tr
-                  %td= text_field_tag "position[#{queue_item.id}]", queue_item.position
+                  = hidden_field_tag "queue_items[][id]", queue_item.id
+                  %td= text_field_tag "queue_items[][position]", queue_item.position
                   %td
                     = link_to queue_item.video_title, queue_item.video
                   %td
