--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -18,7 +18,7 @@
       = form_for([@video, Review.new]) do |f|
         %fieldset
           %label Rate this video
-          = f.select :rating, options_for_select((1..5).to_a.reverse.map { |i| pluralize(i, "Star") })
+          = f.select :rating, options_for_video_reviews
           %label Write Review
           = f.text_area(:content, rows: 6, class: 'span6')
         %fieldset.actions.clearfix
