--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -9,7 +9,7 @@
           %span Rating: #{@video.average_rating}/5.0
         %p= @video.description
         .actions
-          %a.btn.btn-primary(href="") Watch Now
+          = link_to 'Watch Now', @video.video_url, class: 'btn btn-primary'
           = add_queue_btn(@video)
 
 %section.reviews.container
